// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 1`] = `
<div
  className="project-loading-container fill"
>
  <div
    className="project-loading"
  >
    <div
      className="section-spinner"
    >
      <Spinner
        size={100}
      />
    </div>
    <div>
      Project loading, please wait...
    </div>
  </div>
</div>
`;

exports[`Should render with custom text 1`] = `
<div
  className="project-loading-container fill"
>
  <div
    className="project-loading"
  >
    <div
      className="section-spinner"
    >
      <Spinner
        size={100}
      />
    </div>
    <div>
      custom text
    </div>
  </div>
</div>
`;
